Add hover colouring effect

--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
 
         <div class="menu">
             <a href="#howtoplay"><div class="submenu">How to Play</div></a>
-            <a href="https://cazolion.github.io/Etch-A-Sketch/"><div class="submenu">Reset</div></a>
+            <div id="reset" class="submenu">Reset</div>
             <a href="https://github.com/Cazolion/Etch-A-Sketch" target="_blank"><div class="submenu">See on GitHub</div></a>
         </div>
     </div>
         <div class="content">
             <div class="title2">Grid</div>
             <div class="game">
-                <div id="grid"></div>
             </div>
 
-            <div class="howtoplay">
+            <div id="howtoplay">
                 <div class="title2">How to Play</div>
                 <p>Mouse over the grid to colour in the squares.</p>
                 <p>You can refresh the page or click the "Reset" button in the menu to draw again.</p>
