Add radio buttons

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
             <div class="title2">Grid</div>
             <div class="game">
             </div>
+            <div class="control">
+                <div style="text-align: center;">Pick a different colour:<br></div>   
+                <input type="radio" id="default" name="control" value="default">
+                <label for="default">Default</label>
+                <input type="radio" id="gradient" name="control" value="gradient">
+                <label for="gradient">Gradient</label>
+                <input type="radio" id="rainbow" name="control" value="rainbow">
+                <label for="rainbow">Rainbow</label>
+            </div>
 
             <div id="howtoplay">
                 <div class="title2">How to Play</div>
