--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div id="howtoplay">
                 <div class="title2">How to Play</div>
                 <p>Mouse over the grid to colour in the squares.</p>
+                <p>You can choose to colour in with the default colour, gradually add colour each pass, or get a randomly selected colour for each box.</p>
                 <p>You can refresh the page or click the "Reset" button in the menu to draw again.</p>
             </div>
         </div>  
