Add default radio button selection

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="control">
                 <div style="text-align: center;">Pick a different colour:<br></div>   
-                <input type="radio" id="default" name="control" value="default">
+                <input type="radio" id="default" name="control" value="default" checked="checked">
                 <label for="default">Default</label>
                 <input type="radio" id="gradient" name="control" value="gradient">
                 <label for="gradient">Gradient</label>
